# secunda_test_task

./: .env.dist  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  task_description.txt
alembic/versions/: 05e9f202542d_seed_initial_data.py  222d5a357d3b_empty_message.py
app/: database.py  models.py  schemas.py
docker/local/: Dockerfile  docker-compose.yml
docker/local/scripts/: entrypoint.sh
migrations/: alembic.ini  env.py
migrations/versions/: 224db96f8c65_seed_initial_data.py  3f4c5d6e7a8b_add_activity_depth_check.py  6d2d0ff6662e_create_initial_tables.py
src/: main.py  schemas.py
src/api/: middlewares.py  schemas.py
src/api/controllers/: __init__.py  activities.py  buildings.py  dependencies.py  organizations.py  system.py
src/api/handlers/: lifespan.py
src/api/schemas/: __init__.py  activity.py  building.py  organization.py  system.py
src/core/: __init__.py  config.py
src/db/: database.py
src/db/models/: __init__.py  activity.py  building.py  common.py  organization.py  phone_number.py
src/repositories/: directory.py
src/services/: directory.py
tests/: conftest.py  test_activities.py  test_buildings.py  test_organizations.py
